--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,38 @@
-.App {
+.image{
+  float: left;
+}
+.details{
+  display: inline-block;
+  margin: 40px; 
+}
+
+.color input[type=radio]:checked + .colorSchema{
+    border: 2px dotted;
+      height: 42px;
+  width: 42px;
+}
+.color .colorSchema{
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
+}
+input[type=radio]{
+    display:none;
+}
+.color, .size, .qty{ margin-top: 3%; }
+.sizeSchema{
+  border: 1px solid #b4b4b4;
+  height: 30px;
+  width: 40px;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.sizeSchema:focus{
+  border: 2px solid red;
+}
+.btn{
+  margin-top: 4%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.address div.row{
+  margin-top: 1%;
 }
